infra/app-deploy.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: retail-grant
  namespace: retail-ns
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: noel-ns
  to:
    - group: ""
      kind: Service


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-deploy
  namespace: retail-ns
  labels:
    app: retail
spec:
  replicas: 4
  selector:
    matchLabels:
      app: retail
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: retail
    spec:
      containers:
        - name: retail-container
          image: vasuvarshney07/vasu_varshney_fordocker-app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: retail-service
  namespace: retail-ns
spec:
  selector:
    app: retail
  ports:
    - port: 82
      targetPort: 3000
  type: NodePort

---
