infra/mysql-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-state
  namespace: retail-ns
  labels:
    app: mysql
spec:
  replicas: 3
  serviceName: mysql-service 
  selector:
    matchLabels:
      app: mysql
  volumeClaimTemplates:
    - metadata: 
        name: mysql-retail-vct
      spec:
        accessModes: [ReadWriteMany]
        storageClassName: nfs-csi-retail
        resources:
          requests:
            storage: 5Gi
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 1
  #     maxSurge: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: mysql-init-scripts
          configMap:
            name: mysql-init-config
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-retail-vct
              mountPath: /var/lib/mysql
            # - name: mysql-init-scripts
            #   mountPath: /docker-entrypoint-initdb.d
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: retail-ns
spec:
  selector:
    app: mysql
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
